Cleared 404 spacing issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,5 +35,5 @@ a {
 .pokeFont{
   -webkit-text-stroke-width: 0.0em;
   -webkit-text-stroke-color: #5C76FE;
-  letter-spacing: 3px;
+  letter-spacing: 5px;
 }
